added summary panel logic and fixed bugs on export for production builds

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TBD Fit — Video Overlay Editor</title>
+    <style>
+      .drag { -webkit-app-region: drag; app-region: drag; }
+      .no-drag { -webkit-app-region: no-drag; app-region: no-drag; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
