tons of edits to input panel, video editor, transcribing, icons, and name update

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TBD Fit — Video Overlay Editor</title>
+    <title>Peach'd Up Studio</title>
     <style>
       .drag { -webkit-app-region: drag; app-region: drag; }
       .no-drag { -webkit-app-region: no-drag; app-region: no-drag; }
